# molview-lambda-api

./: .editorconfig  .gitignore  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: deploy.yml  docker.yml  version-bump.yml
test/: author.json  cis.json  faulty1.json  faulty2.json  invalid.json  isomer1.json  isomer2.json  new_format.json  trans.json
test/4f9ead79/: mol1.json  mol2.json
test/75e47871/: without_h.json
test/89c1f93c/: author.json
test/arrows/: 1.json  2.json  3.json  4.json  5.json
test/halogen/: invalid.json  submission.json
test/hcount/: with_h.json
test/resonance/: mol1.json  mol2.json
test/v2/: v0.json  v2.json
